Projet_GL/src/test/deca/syntax/invalid/unprovided/digit_start_ident.deca
// Test un identifiant qui commence par un digit


12cafaitplaizz
